# LangBOTs

./: .gitignore  README.md  api.py  chain.py  main.py  query.py  requirements.txt  scrapsplit.py  scrapsplitvec.py  setup.cfg  setup.py  tuner.py
langBOTs/: README.md  api.py  chain.py  main.py  query.py  scrapsplitvec.py
langBOTs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
